
New Features:

- Added UserGroupPreference, like UserPreference but for user groups.
  UserFacade.getPreference() now looks for group preference if no user
  preference is found.
- Changed Service ECA rules with @when of tx-commit or tx-rollback to
  attach to the transaction after the service is run so that results are
  available

Bug Fixes:

- Changed commit() to rollback if commit fails to cleanup the transaction,
  can happen for example with TransactionCache has a DB error during
  pre-commit
- ArtifactHit count now skipped for UserAccount to avoid infinite recursion
  (shows as a StackOverflow exception)
- EntityValue.containsKey() now returns true if there is a value for the
  key (even null), not just if it is a valid field name; this was
  inconvenient for various things, especially when treating EntityValue
  like a Map
- Fixed issue where Service ECA rules with @when of tx-commit or
  tx-rollback were never run
- Fixed issue with primary sequenced ID where cached current bank was
  shared among tenants even though DB values were separate, now cached
  current bank is also separate
- Fixed GitHub issue #26 where the Calendar used for setting Date/etc
  values was not valid because the cached Calendar object in UserFacadeImpl
  was set in a query before getting the UserAccount, and not reset by
  getUserAccount() (ie calling clearPerUserValues())
- Changed Quartz jobs (async and scheduled service calls) to run in the
  tenant they were initiated in instead of always in the DEFAULT tenant

===========================================================================
Release 1.4.0 - 21 Mar 2014
===========================================================================

Moqui Framework 1.4.0 is a major new feature and bug fix release.

Significant new features include: incorporating the Metis Admin Template,
adding Twitter Bootstrap and updating jQuery/jQueryUI, added Bitronix
transaction manager and pluggable JTA implementation support, added JBoss